# finetune

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test.py
.github/workflows/: mlops-pipeline.yml
src/: .env
src/config/: settings.py
src/config/models/: sft.py
src/config/models/peft/: lora.py
src/data/: argilla-news.py  argilla.py
src/docker/: Dockerfile
src/scripts/: sft.py
