[project]
name = "finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.7.0",
    "huggingface-hub>=1.7.1",
    "mlflow>=3.10.1",
    "peft>=0.18.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.6",
    "tensorflow>=2.21.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "trl>=0.29.0",
]
